--- a/index.html
+++ b/index.html
@@ -18,14 +18,46 @@
   <source src="ColdTemp1.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
+<audio id="myAudio2">
+  
+  <source src="ColdTemp2.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+<audio id="myAudio3">
+  
+  <source src="ColdTemp3.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+<audio id="myAudio4">
+  
+  <source src="ColdTemp4.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+<audio id="myAudio5">
+  
+  <source src="ColdTemp5ExtraChallenging.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+
 
 <p>Click the buttons to play audio.</p>
 
 <button onclick="playAudio()" type="button">Play Audio 1</button>
 <button onclick="pauseAudio()" type="button">Reset Audio 1</button> 
 <br></br>
-<button onclick="playAudio()" type="button">Play Audio 2</button>
-<button onclick="pauseAudio()" type="button">Reset Audio 2</button>
+<button onclick="playAudio2()" type="button">Play Audio 2</button>
+<button onclick="pauseAudio2()" type="button">Reset Audio 2</button>
+<br></br>
+<button onclick="playAudio3()" type="button">Play Audio 3</button>
+<button onclick="pauseAudio3()" type="button">Reset Audio 3</button> 
+<br></br>
+<button onclick="playAudio4()" type="button">Play Audio 4</button>
+<button onclick="pauseAudio4()" type="button">Reset Audio 4</button>
+<br></br>
+<button onclick="playAudio5()" type="button">Play Audio 5</button>
+<button onclick="pauseAudio5()" type="button">Reset Audio 5</button> 
+<br></br>
+
   
   
 
